@@ -16,14 +16,14 @@ foreach($fileCheck as $fileValidation):
 <tr class="row">
   <td><?php echo $fileValidation["targetname"];?></td>
   <td>&nbsp;</td>
-  <td><?php if($fileValidation["exists"]) echo ("Exists"); else echo ("File needs to exist");?></td>
+  <td><?php if($fileValidation["exists"]) echo ("<font color='green'>Exists</font>"); else echo ("<font color='red'>File needs to exist</font>");?></td>
   <td>&nbsp;</td>
   <td>
   <?php if(isset($fileValidation["writable"])): ?>
-			<?php if($fileValidation["writable"])  echo("Writable"); else echo ("File needs to be writable"); ?>
+			<?php if($fileValidation["writable"])  echo("<font color='green'>Writable</font>"); else echo ("<font color='red'>File needs to be writable</font>"); ?>
   <?php endif; ?>
   <?php if(isset($fileValidation["executable"])): ?>
-			<?php if ($fileValidation["executable"])  echo("Executable"); else echo ("File needs to be executable"); ?>
+			<?php if ($fileValidation["executable"])  echo("<font color='green'>Executable</font>"); else echo ("<font color='red'>File needs to be executable</font>"); ?>
   <?php endif; ?>
   </td>
 </tr>
@@ -34,7 +34,7 @@ foreach($fileCheck as $fileValidation):
 <tr>
   <td align="center">
     <form action="<?php echo($_SERVER['PHP_SELF']); ?>?action=cancel" method="post">
-    	<input type="button" onMouseOver="popup('<?php echo ("test"); ?>')" onmouseout="kill()" onfocus="this.blur()" onClick="window.location='<?php echo($_SERVER['PHP_SELF']); ?>?action=cancel'" value="<?php echo ($lang['continue']); ?>" />
+    	<input type="button" onClick="window.location='<?php echo($_SERVER['PHP_SELF']); ?>?action=cancel'" value="<?php echo ($lang['continue']); ?>" />
     </form>
   </td>
 </tr>
